# morphe-manager-YT

./: CHANGELOG.md  THIRD_PARTY_LICENSES  app-release.json  crowdin.yml  settings.gradle.kts
.github/workflows/: compile_pull_request.yml  merge_crowdin.yml  pull_crowdin.yml  push_strings.yml  release.yml
api/: build.gradle.kts
app/: .releaserc  CHANGELOG.md  app-release-new.json  app-release.json  build.gradle.kts  gradle.properties  proguard-rules.pro
app/aboutlibraries/libraries/: github.freedoom.freedoom.json  github.ozkl.doomgeneric.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  doom_jni.cpp  prop_override.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values-af-rZA/: strings.xml
app/src/main/res/values-ar-rSA/: strings.xml
app/src/main/res/values-as-rIN/: strings.xml
app/src/main/res/values-az-rAZ/: strings.xml
app/src/main/res/values-be-rBY/: strings.xml
app/src/main/res/values-bg-rBG/: plurals.xml  strings.xml
app/src/main/res/values-bn-rBD/: strings.xml
app/src/main/res/values-bs-rBA/: strings.xml
app/src/main/res/values-ca-rES/: strings.xml
app/src/main/res/values-ckb-rIR/: strings.xml
app/src/main/res/values-cs-rCZ/: strings.xml
app/src/main/res/values-da-rDK/: strings.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-el-rGR/: plurals.xml  strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-eu-rES/: strings.xml
app/src/main/res/values-fa-rIR/: strings.xml
gradle/: libs.versions.toml
(+282 files in other folders)
